Design issue fixes
• Relationship badge issue fix.
• admin dashboard behavior fix.
• disclosure title too long fix.
• questionnaire validation while certify added.
• common close btn with correct design added.
• sfi add country not working fixed.
• pi screen help text with quick links dynamic width issue fixed.

--- a/Client/projects/coi/src/app/disclosure/relationship/define-relation/define-relation.component.scss
+++ b/Client/projects/coi/src/app/disclosure/relationship/define-relation/define-relation.component.scss
@@ -117,8 +117,8 @@
   height: 27px;
   background: #949494;
   position: relative;
-  left: -12px;
-  top: -8px;
+  left: -16px;
+  top: -5px;
   font-size: 14px;
   font-weight: 500;
   border-radius: 0 50px 50px 0;
@@ -176,36 +176,6 @@
   color        : red !important;
   padding-right: 2px;
   font-size    : 1.2rem
-}
-
-.close {
-  position     : absolute;
-  top          : 35px;
-  color        : grey;
-  background   : #ffffff;
-  z-index      : 1500;
-  padding      : 1.2rem 1.3rem;
-  border-radius: 50%;
-  left         : -27px;
-  opacity      : 1;
-  width        : 40px;
-  height       : 40px;
-  font-size    : 14px;
-}
-
-.close:focus, .close:hover  {
-    background-color: var(--bs-form-control-bg);
-    border-color: #86b7fe;
-    outline: 0;
-    box-shadow: 0 0 0 0.25rem rgba(13,110,253,.25);
-}
-
-.close img {
-  width    : 17px;
-  position : absolute;
-  top      : 50%;
-  right    : 50%;
-  transform: translate(50%, -50%);
 }
 
 .invalid-feedback {
